--- a/FileRename/nbproject/project.properties
+++ b/FileRename/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=FileRename
+application.vendor=Yohan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/FileRename.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Yohan\\Downloads\\commons-logging-1.2-bin\\commons-logging-1.2\\commons-logging-1.2.jar
+file.reference.iText.jar=C:\\Users\\Yohan\\Downloads\\itext.jar\\iText.jar
+file.reference.pdfbox-2.0.12.jar=C:\\Users\\Yohan\\Downloads\\pdfbox-2.0.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.pdfbox-2.0.12.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.iText.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
